completed the questions controller and the views. Outstanding: style & links

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,1 +1,11 @@
-<p> The answers will appear here
+<div class= "container">
+  <h1>Stupid Coaching in Rails</h1>
+  <div class= "card-white">
+    <p> - <%= @question %><br>
+    <em>-You</em>
+  </div>
+  <div class= "card-yellow">
+    <p> - <%= @answer %><br>
+    <em> - Your coach </em>
+  </div>
+</div>
