--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,5 +1,8 @@
-<h1>Stupid Coaching in Rails</h1>
-<form action="/answer" data-turbo="false">
-  <input type="text" name="answer">
-  <input type="submit" value="Ask!">
-</form>
+<div class ="container">
+  <h1>Stupid Coaching in Rails</h1>
+  <p> Ask your coach anything:
+  <form action="/answer" data-turbo="false">
+    <input type="text" name="question">
+    <input type="submit" value="Ask!">
+  </form>
+</div>
