--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,8 +1,12 @@
 <div class ="container">
-  <h1>Stupid Coaching in Rails</h1>
+  <h1>Stupid Coaching</h1>
   <p> Ask your coach anything:
   <form action="/answer" data-turbo="false">
-    <input type="text" name="question">
-    <input type="submit" value="Ask!">
+    <div class="input-group mb-3">
+      <input type="text" name="question" class="form-control" placeholder="Ask here">
+      <div class="input-group-append">
+        <input type="submit" class="btn btn-primary" value="Ask!">
+      </div>
+    </div>
   </form>
 </div>
